# advent-of-code

./: .gitignore  LICENSE  README.md  build.gradle
go/: go.mod  test.sh
gradle/: install-git-hooks.gradle
java/: .gitignore  build.gradle
templates/c++/: conanfile.txt  install.ps1  install.sh
year2015/day1/: NotQuiteLisp.java
year2015/day10/: README.md
year2015/day16/: AuntSue.java
year2015/day17/: README.md
year2015/day18/: GifYard.java
year2015/day19/: MedicineRudolph.java
year2015/day2/: ToldNoMath.java
year2015/day21/: README.md
year2015/day25/: LetItSnow.java  README.md
year2015/day3/: README.md
year2015/day4/: IdealStockingStuffer.java
year2015/day6/: ProbablyFireHazard.java  README.md
year2015/day8/: MatchSticks.java  README.md
year2016/day13/: README.md
year2016/day2/: README.md
year2016/day4/: README.md
year2016/day6/: README.md  SignalsNoise.java
year2016/day8/: README.md
year2017/day01/: README.md
year2017/day03/: README.md
year2017/day07/: Cargo.toml
year2017/day08/: Cargo.toml
year2017/day11/: README.md
year2017/day15/: Cargo.toml
year2017/day16/: README.md  main.py
year2017/day17/: README.md  main.py
year2017/day18/: README.md  main.py
year2017/day19/: README.md  main.py
year2017/day20/: README.md  main.py
year2017/day21/: CMakeCache.txt  CMakeLists.txt  conanfile.txt  gtest.sh
year2019/day1/: README.md
year2019/day14/: README.md  StoichiometryCalculator.java
year2025/day02/: CMakeLists.txt  requirements.txt
year2025/day02/src/: lib.cpp  lib.h
year2025/day02/test/: lib_test.cpp
(+600 files in other folders)
